crates/scorecard/tests/trybuild/changed_scope_diagram_red_without_detail_must_fail.stderr
error[E0061]: this function takes 5 arguments but 4 arguments were supplied
  --> tests/trybuild/changed_scope_diagram_red_without_detail_must_fail.rs:14:9
   |
14 |         Row::changed_scope_diagram_red(common, "graph LR\n".to_string(), 0, "0 nodes".to_string());
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------------------------------------------------------------ argument #5 of type `String` is missing
   |
note: associated function defined here
  --> src/lib.rs
   |
   |     pub fn changed_scope_diagram_red(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^
help: provide the argument
   |
14 |         Row::changed_scope_diagram_red(common, "graph LR\n".to_string(), 0, "0 nodes".to_string(), /* String */);
   |                                                                                                  ++++++++++++++
